--- a/.env.development
+++ b/.env.development
@@ -7,10 +7,10 @@ VITE_DROP_CONSOLE = true
 #VITE_PROXY = [["/appApi","http://localhost:8001"],["/upload","http://localhost:8001/upload"]]
 #VITE_PROXY=[["/api","https://naive-ui-admin"]]
 
-# VITE_GLOB_API_URL =http://127.0.0.1:5000
+VITE_GLOB_API_URL =http://127.0.0.1:5000
 
 VITE_GLOB_UPLOAD_URL=
 
 VITE_GLOB_IMG_URL=
 
-VITE_GLOB_API_URL_PREFIX = /api
+VITE_GLOB_API_URL_PREFIX = /api/v1
