--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@vicons/antd": "^0.12.0",
     "@vicons/fluent": "^0.12.0",
     "@vicons/ionicons5": "^0.12.0",
+    "@vicons/tabler": "^0.12.0",
     "@vueup/vue-quill": "^1.0.0",
     "@vueuse/core": "^9.5.0",
     "axios": "^1.1.3",
