apply all permissions

--- a/.env.production
+++ b/.env.production
@@ -18,7 +18,7 @@ VITE_GLOB_UPLOAD_URL=
 
 # Image prefix address
 VITE_GLOB_IMG_URL=
-
+VITE_GLOB_APP_SHORT_NAME = CRM
 # interface prefix
 VITE_GLOB_API_URL_PREFIX = /api/v1
 
