--- a/.env.development
+++ b/.env.development
@@ -3,7 +3,7 @@ VITE_PUBLIC_PATH = /
 VITE_USE_MOCK = true
 VITE_BASE_URL = /
 VITE_DROP_CONSOLE = true
-
+VITE_GLOB_APP_SHORT_NAME = CRM
 #VITE_PROXY = [["/appApi","http://localhost:8001"],["/upload","http://localhost:8001/upload"]]
 #VITE_PROXY=[["/api","https://naive-ui-admin"]]
 
