--- a/.env.development
+++ b/.env.development
@@ -9,8 +9,8 @@ VITE_GLOB_APP_SHORT_NAME = CRM
 
 VITE_GLOB_API_URL =http://127.0.0.1:5000
 
-VITE_GLOB_UPLOAD_URL=
+VITE_GLOB_UPLOAD_URL=http://127.0.0.1:5000/api/v1/upload
 
-VITE_GLOB_IMG_URL=
+VITE_GLOB_IMG_URL=http://127.0.0.1:5000
 
 VITE_GLOB_API_URL_PREFIX = /api/v1
