--- a/.env-example
+++ b/.env-example
@@ -1,8 +1,8 @@
 VITE_APP_VERSION=1.0.0
-VITE_TEAM_NAME=AbendSoft Team
-VITE_GITHUB_URL=https://abendsoft.com
-VITE_APP_TITLE=InSync Admin CRM
-VITE_API_URL=http://127.0.0.1:5000
-VITE_UPLOAD_URL=http://127.0.0.1:5000/api/v1/upload
-VITE_IMG_URL=http://127.0.0.1:5000
+VITE_TEAM_NAME=Awal Solution
+VITE_GITHUB_URL=https://github.com/awal-solution
+VITE_APP_TITLE=Awal HR
+VITE_API_URL=https://awal-hr-api.awalsolution.com
+VITE_UPLOAD_URL=https://awal-hr-api.awalsolution.com/api/v1/upload
+VITE_IMG_URL=https://awal-hr-api.awalsolution.com
 VITE_API_PREFIX=/api/v1
