--- a/.env-example
+++ b/.env-example
@@ -1,8 +1,8 @@
 VITE_APP_VERSION=1.0.0
-VITE_TEAM_NAME=Awal Solution
+VITE_TEAM_NAME=Awal Solution Team
 VITE_GITHUB_URL=https://github.com/awal-solution
-VITE_APP_TITLE=Awal HR
-VITE_API_URL=https://awal-hr-api.awalsolution.com
-VITE_UPLOAD_URL=https://awal-hr-api.awalsolution.com/api/v1/upload
-VITE_IMG_URL=https://awal-hr-api.awalsolution.com
+VITE_APP_TITLE=Awal HR Management System
+VITE_API_URL=https://awal-hrms-api.test
+VITE_UPLOAD_URL=https://awal-hrms-api.test/api/v1/upload
+VITE_IMG_URL=https://awal-hrms-api.test
 VITE_API_PREFIX=/api/v1
