--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "awal-hrms-dashbaord",
+  "name": "awal-hrms-tenant-dashbaord",
   "version": "0.0.0",
   "private": true,
   "scripts": {
