--- a/.env-example
+++ b/.env-example
@@ -5,4 +5,4 @@ VITE_APP_TITLE=Awal HR Management System
 VITE_API_URL=https://awal-hrms-api.test
 VITE_UPLOAD_URL=https://awal-hrms-api.test/api/v1/upload
 VITE_IMG_URL=https://awal-hrms-api.test
-VITE_API_PREFIX=/api/v1
+VITE_API_PREFIX=/api/v1/admin
