--- a/.env-example
+++ b/.env-example
@@ -3,13 +3,13 @@ VITE_TEAM_NAME=Awal Solution Team
 VITE_GITHUB_URL=https://github.com/awal-solution
 VITE_APP_URL=https://awalsolution.com
 VITE_APP_TITLE=Awal Management System
-VITE_API_URL=https://awal-cms-api.awalsolution.com
-VITE_UPLOAD_URL=https://awal-cms-api.awalsolution.com/api/v1/upload
-VITE_IMG_URL=https://awal-cms-api.awalsolution.com
-VITE_API_ADMIN_PREFIX=/api/v1/admin
-VITE_API_TENANT_PREFIX=/api/v1/tenant
-
+VITE_API_URL=http://127.0.0.1:7066
+VITE_UPLOAD_URL=http://127.0.0.1:7066/api/v1/upload
+VITE_IMG_URL=https://awal-bucket.test
+VITE_API_PREFIX=/api/v1
 
 # central domain
-VITE_CENTERAL_DOMAIN=localhost
-# VITE_CENTERAL_DOMAIN=awal-umrah-admin-dashboard.test
+
+# VITE_CENTERAL_DOMAIN=localhost
+
+VITE_CENTERAL_DOMAIN=awal-umrah-tenant-dashboard.test
