--- a/.env-example
+++ b/.env-example
@@ -10,4 +10,4 @@ VITE_API_PREFIX=/api/v1
 
 # central domain
 
-VITE_CENTERAL_DOMAIN=localhost
+VITE_CENTERAL_DOMAIN=umrah-dashboard.awalsolution.com
