--- a/.env-example
+++ b/.env-example
@@ -1,13 +1,13 @@
 VITE_APP_VERSION=1.0.0
 VITE_TEAM_NAME=Awal Solution Team
 VITE_GITHUB_URL=https://github.com/awal-solution
-VITE_APP_URL=https://awalsolution.com
-VITE_APP_TITLE=Awal Management System
-VITE_API_URL=https://www.umrah-api.awalsolution.com
-VITE_UPLOAD_URL=https://www.umrah-api.awalsolution.com/api/v1/upload
-VITE_IMG_URL=https://www.umrah-api.awalsolution.com
+VITE_APP_URL=http://127.0.0.1:5173
+VITE_APP_TITLE=Your App Name
+VITE_API_URL=http://127.0.0.1:7066
+VITE_UPLOAD_URL=http://127.0.0.1:7066/api/v1/upload
+VITE_IMG_URL=http://127.0.0.1:7066
 VITE_API_PREFIX=/api/v1
 
 # central domain
 
-VITE_CENTERAL_DOMAIN=umrah-dashboard.awalsolution.com
+VITE_CENTERAL_DOMAIN=localhost
