--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "awal-hr-admin-dashbaord",
+  "name": "vue-multi-tenant-boilerplate",
   "private": true,
   "version": "0.0.0",
   "type": "module",
