--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@primevue/themes": "^4.0.5",
     "@vueuse/core": "^10.9.0",
     "axios": "^1.6.8",
     "dayjs": "^1.11.10",
     "pinia": "^2.1.7",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.0.5",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
+    "@primevue/auto-import-resolver": "^4.0.5",
     "@rushstack/eslint-patch": "^1.10.0",
     "@tsconfig/node18": "^18.2.4",
     "@types/node": "^20.12.7",
@@ -43,7 +47,9 @@
     "prettier": "^3.2.5",
     "sass": "^1.75.0",
     "tailwindcss": "^3.4.3",
+    "tailwindcss-primeui": "^0.3.4",
     "typescript": "^5.2.2",
+    "unplugin-vue-components": "^0.27.4",
     "vite": "^5.2.0",
     "vue-tsc": "^2.0.6"
   }
