--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@primevue/auto-import-resolver": "^4.0.5",
     "@rushstack/eslint-patch": "^1.10.0",
     "@tsconfig/node18": "^18.2.4",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^20.12.7",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
@@ -37,6 +38,7 @@
     "autoprefixer": "^10.4.19",
     "eslint": "^8.56.0",
     "eslint-plugin-vue": "^9.24.1",
+    "lodash-es": "^4.17.21",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
